#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

HP-2011-05-10-0: Bugfix:      SGE_Helper_Service.exe sometimes crashes at job
                              start
                 Issue:       GE-3476
                 Bugfix:      on Windows Vista, GUI jobs can't be started on
                              a Remote Desktop session
                 Issue:       GE-3477
                 Review:      SH

EB-2011-05-10-0: Bugfix:      man page sge_conf.5, execd_params, section 
                              ENABLE_BINDING is within section PDC_INTERVAL
                              Typos in interactive installation	
                 Issue:       GE-3471 GE-3475

JG-2011-05-06-1: Bugfix:      fix for gtar detection in mk_dist
                 Belongs to:  JG-2011-05-05-0

JG-2011-05-06-0: Created final packages for Stoat
-------------------------------------------------

JG-2011-05-05-4: Bugfix:      GPL sources need to be available in common package
                 Issue:       GE-3421

HP-2011-05-05-1: Bugfix:      Fixed several Windows related bugs in Makefiles,
                              zerodepend script, inst_execd.sh file.
                 Review:      DG

HP-2011-05-05-0: Bugfix:      on Windows Vista, the 2nd fork of the daemonizing
                              execd sometimes fails at boot time
                 Issue:       GE-3328
                 Review:      DG

JG-2011-05-05-3: Bugfix:      install_execd prints error messages on 'install'
                              of /etc/init.d script on Ubuntu
                 Issue:       GE-3431
                 Review:      DG
