@@ -103,6 +103,7 @@ int incompatibleType2(const char *fmt,...)
    DENTER(TOP_LAYER, "incompatibleType2");
    va_start(ap, fmt);
    vsnprintf(buf, sizeof(buf), fmt, ap);
+   va_end(ap);
 
    CRITICAL((SGE_EVENT, SFNMAX, buf));
    fprintf(stderr, SFNMAX, buf);
